# ALTEREGO-OS-

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
alterego/: __init__.py  cli.py  kernel_factory.py
alterego/engineering/: __init__.py
alterego/kernel/: __init__.py  base.py  capability_registry.py  chief_of_staff.py  confidence_engine.py  context_engine.py  daily_assistant.py  decision_engine.py  departments.py  digital_twin.py  digital_twin_v2.py  event_bus.py  goal_engine.py  initiative_engine.py  learning_engine.py  life_timeline.py  long_term_memory.py  memory.py  mission_engine.py  planner.py  plugin_manager.py  policy_engine.py  unified_workspace.py  validation_pipeline.py
alterego/plugins/: __init__.py
alterego/plugins/browser/: __init__.py
alterego/plugins/docker/: __init__.py
alterego/plugins/email/: __init__.py
alterego/plugins/filesystem/: __init__.py
alterego/plugins/github/: __init__.py
alterego/plugins/llm/: __init__.py
alterego/plugins/mongo/: __init__.py
alterego/plugins/postgres/: __init__.py
alterego/plugins/ssh/: __init__.py
alterego/plugins/telegram/: __init__.py
audit/: phase3b_result.json  phase3b_test.py
audit/phase29/report/: PHASE_29_REPORT.md
audit/phase29/results/: scenario_01_local_project.json  scenario_02_vps.json  (+6 more)
audit/report/: FINAL_AUDIT_REPORT.md
audit/results/: audit_01_architecture.json  audit_02_event_bus.json  audit_03_memory.json  audit_04_plugin_manager.json  audit_05_capability_registry.json  audit_06_chief_of_staff.json  audit_07_scheduler.json  audit_08_security.json  audit_09_observability.json  audit_10_performance.json
audit/scripts/: audit_01_architecture.py  audit_02_event_bus.py  audit_03_memory.py  audit_04_plugin_manager.py  audit_05_capability_registry.py  audit_06_chief_of_staff.py  audit_07_scheduler.py  audit_08_security.py  audit_09_observability.py  audit_10_performance.py  compile_report.py
config/: alterego.yaml
departments/: automation.yaml  content.yaml  education.yaml  engineering.yaml  finance.yaml  infrastructure.yaml  marketing.yaml  monitoring.yaml  personal.yaml  research.yaml  security.yaml
docs/: ARCHITECTURE.md  QUICKSTART.md
docs/architecture/: README.md
scripts/: llm_proxy.js  push.sh  smoke_test.py
tests/: test_base.py  test_capability_registry.py  test_confidence_engine.py  test_departments.py  test_end_to_end.py  test_event_bus.py  test_learning_engine.py  test_memory.py  test_planner.py  test_plugin_filesystem.py  test_plugin_manager.py  test_policy_engine.py  test_v21_integration.py
(+18 files in other folders)
